--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -78,18 +78,18 @@ jobs:
           fi
 
       - name: Upload to Databricks Volume
-        if: success()  # Only if CSV exists
+        if: success()
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_TOKEN: ${{ secrets.DB_TOKEN }}
         run: |
           CONTENTS=$(base64 -w 0 output/latest_prices.csv)
-          curl -X POST "$DB_HOST/api/2.0/dbfs/put" \
+          curl -X POST "$DB_HOST/api/2.0/fs/files" \
             -H "Authorization: Bearer $DB_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{
-              "path": "dbfs:/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv",
+              "path": "/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv",
               "overwrite": true,
               "contents": "'$CONTENTS'"
             }'
-          echo "✅ Uploaded to Databricks"
+          echo "Uploaded to Databricks Volume"
