--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -76,25 +76,24 @@ jobs:
             exit 1
           fi
 
-      - name: Upload to Databricks Volume (100% working Nov 2025)
+      - name: Upload to Databricks Volume (WORKS 2025)
         if: success()
         env:
-          DB_HOST: ${{ secrets.DB_HOST }} 
-          DB_TOKEN: ${{ secrets.DB_TOKEN }}
+          DATABRICKS_HOST: ${{ secrets.DB_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DB_TOKEN }}
         run: |
-          echo "Uploading latest_prices.csv to Unity Catalog volume..."
-          CONTENTS=$(base64 -w 0 output/latest_prices.csv)
-          
-          RESPONSE=$(curl -s -X POST \
-            "${DB_HOST}/api/2.0/fs/files" \
-            -H "Authorization: Bearer ${DB_TOKEN}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "path": "/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv",
-              "overwrite": true,
-              "contents": "'"$CONTENTS"'"
-            }')
-          
-          echo "Response: $RESPONSE"
-          echo "$RESPONSE" | grep -q '"error_code"' && echo "Upload FAILED" && exit 1
-          echo "SUCCESS: latest_prices.csv uploaded to Databricks volume"
+          echo "Installing Databricks CLI..."
+          pip install --quiet databricks-cli
+
+          echo "Configuring CLI..."
+          databricks configure --token <<EOF
+          $DATABRICKS_HOST
+          $DATABRICKS_TOKEN
+          EOF
+
+          echo "Uploading latest_prices.csv..."
+          databricks fs cp --overwrite \
+            output/latest_prices.csv \
+            dbfs:/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv
+
+          echo "SUCCESS: File uploaded to Databricks volume"
