--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,24 +1,19 @@
 name: Daily Price Check
-
 on:
   schedule:
-    - cron: '0 7 * * *'  # 7 AM UTC daily
-  workflow_dispatch:  # Manual trigger
-
+    - cron: '0 7 * * *' # 7 AM UTC daily
+  workflow_dispatch: # Manual trigger
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install Python dependencies
         run: pip install -r requirements.txt
-
       - name: Install Chromium dependencies (Fix for Ubuntu 22.04)
         run: |
           sudo apt-get update
@@ -55,18 +50,15 @@ jobs:
             libgtk-3-0 \
             xvfb
           echo "Chromium deps installed successfully"
-
       - name: Install Playwright and browsers
         run: |
           playwright install chromium
           echo "Playwright Chromium installed"
-
       - name: Run scraper
         run: |
           python scraper.py || echo "Scraper failed - check logs"
         env:
           DISPLAY: :99
-
       - name: Check if CSV generated
         run: |
           if [ -f "output/latest_prices.csv" ]; then
@@ -75,28 +67,19 @@ jobs:
             echo "❌ No CSV - scraper failed"
             exit 1
           fi
-
-      - name: Upload to Databricks Volume
+      - name: Upload to Databricks Volume using CLI
         if: success()
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}      
-          DB_TOKEN: ${{ secrets.DB_TOKEN }}
+          DATABRICKS_HOST: ${{ secrets.DB_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DB_TOKEN }}
         run: |
-          echo "Uploading latest_prices.csv to Unity Catalog volume..."
-          CONTENTS=$(base64 -w 0 output/latest_prices.csv)
-          
-          RESPONSE=$(curl -s -X POST \
-            "${DB_HOST}/api/2.0/fs/files" \
-            -H "Authorization: Bearer ${DB_TOKEN}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "path": "/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv",
-              "overwrite": true,
-              "contents": "'"$CONTENTS"'"
-            }')
-          
-          echo "Response: $RESPONSE"
-          echo "$RESPONSE" | grep -q '"error_code"' && echo "Upload FAILED" && exit 1
-          echo "SUCCESS: latest_prices.csv uploaded to Databricks volume"
-            exit 1
-          fi
+          echo "Installing Databricks CLI..."
+          pip install databricks-cli
+          echo "Configuring CLI..."
+          echo "$DATABRICKS_HOST" | databricks configure --token
+          echo "$DATABRICKS_TOKEN" | databricks configure --token
+          echo "Uploading latest_prices.csv..."
+          databricks fs cp --overwrite \
+            output/latest_prices.csv \
+            dbfs:/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv
+          echo "✅ SUCCESS: File uploaded to Databricks volume"
