--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,19 +67,27 @@ jobs:
             echo "❌ No CSV - scraper failed"
             exit 1
           fi
-      - name: Upload to Databricks Volume using CLI
+          
+      - name: Upload to Databricks Volume (Guaranteed Working)
         if: success()
         env:
           DATABRICKS_HOST: ${{ secrets.DB_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DB_TOKEN }}
         run: |
-          echo "Installing Databricks CLI..."
-          pip install databricks-cli
-          echo "Configuring CLI..."
-          echo "$DATABRICKS_HOST" | databricks configure --token
-          echo "$DATABRICKS_TOKEN" | databricks configure --token
+          echo "Installing latest Databricks CLI..."
+          pip install --quiet --upgrade databricks-cli
+
+          echo "Creating CLI config silently..."
+          mkdir -p ~/.databrickscfg
+          cat > ~/.databrickscfg << EOF
+          [DEFAULT]
+          host = $DATABRICKS_HOST
+          token = $DATABRICKS_TOKEN
+          EOF
+
           echo "Uploading latest_prices.csv..."
           databricks fs cp --overwrite \
             output/latest_prices.csv \
             dbfs:/Volumes/jade_catalog/price_schema/price_volume/latest_prices.csv
-          echo "✅ SUCCESS: File uploaded to Databricks volume"
+
+          echo "SUCCESS: latest_prices.csv uploaded to Databricks volume"
