--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,9 @@
 name: Daily Price Check
 
 on:
-  schedule:
-    - cron: '0 7 * * *'   # Every day at 7 AM UTC
-  workflow_dispatch:      # Allows manual run
+  # schedule:
+  #   - cron: '0 7 * * *'   # Every day at 7 AM UTC
+  # workflow_dispatch:      # Allows manual run
 
 jobs:
   scrape-and-upload:
